@@ -28,6 +28,9 @@ import java.util.Arrays;
 
 public class Hand
 {
+   public static final int AVERAGE=1;
+   public static final int AVERAGE_MINUS=2;
+   public static final int AVERAGE_PLUS=3;
    String number;
    String ns;
    String ew;
@@ -38,31 +41,85 @@ public class Hand
    double ewscore;
    double nsmp;
    double ewmp;
+   int ewavetype;
+   int nsavetype;
    public Hand(String[] data) throws HandParseException
    {
-      if (data.length < 5) 
-         throw new HandParseException("Insufficient fields. I cannot parse a board without at least board number, pair numbers, contract and declarer");
+      if (data.length < 4) 
+         throw new HandParseException("Insufficient fields. I cannot parse a board without at least board number, pair numbers and contract");
       this.number = data[0];
       this.ns = data[1];
       this.ew = data[2];
       this.contract = data[3];
-      this.declarer = data[4].charAt(0);
       switch (data.length) {
          case 10:
             if (0 < data[9].length())
-               this.ewmp = Double.parseDouble(data[9]);
+               try { this.ewmp = Double.parseDouble(data[9]);
+               } catch (NumberFormatException NFe) { 
+                  if (Debug.debug) Debug.print(NFe); 
+                  throw new HandParseException("Invalid Number of Match Points: "+data[9]);
+               }
          case 9:
             if (0 < data[8].length())
-               this.nsmp = Double.parseDouble(data[8]);
+               try { this.nsmp = Double.parseDouble(data[8]);
+               } catch (NumberFormatException NFe) { 
+                  if (Debug.debug) Debug.print(NFe);
+                  throw new HandParseException("Invalid Number of Match Points: "+data[8]);
+               }
          case 8:
             if (0 < data[7].length())
-               this.ewscore = Double.parseDouble(data[7]);
+               try { this.ewscore = Double.parseDouble(data[7]);
+               } catch (NumberFormatException NFe) { 
+                  if (Debug.debug) Debug.print(NFe);
+                  String av = data[7].toLowerCase();
+                  if (av.startsWith("av") && av.length() == 3)
+                     switch (av.charAt(2)) {
+                        case '=':
+                           ewavetype = AVERAGE;
+                           break;
+                        case '+':
+                           ewavetype = AVERAGE_PLUS;
+                           break;
+                        case '-':
+                           ewavetype = AVERAGE_MINUS;
+                           break;
+                        default:
+                           throw new HandParseException("Invalid Average: "+data[7]);
+                     }
+                  else throw new HandParseException("Invalid Score: "+data[7]);
+               }
          case 7:
             if (0 < data[6].length())
-               this.nsscore = Double.parseDouble(data[6]);
+               try { this.nsscore = Double.parseDouble(data[6]);
+               } catch (NumberFormatException NFe) {
+                  if (Debug.debug) Debug.print(NFe);
+                  String av = data[6].toLowerCase();
+                  if (av.startsWith("av") && av.length() == 3)
+                     switch (av.charAt(2)) {
+                        case '=':
+                           nsavetype = AVERAGE;
+                           break;
+                        case '+':
+                           nsavetype = AVERAGE_PLUS;
+                           break;
+                        case '-':
+                           nsavetype = AVERAGE_MINUS;
+                           break;
+                        default:
+                           throw new HandParseException("Invalid Average: "+data[6]);
+                     }
+                  else throw new HandParseException("Invalid Score: "+data[6]);
+               }
          case 6:
             if (0 < data[5].length())
-               this.tricks = Integer.parseInt(data[5]);
+               try { this.tricks = Integer.parseInt(data[5]);
+               } catch (NumberFormatException NFe) { 
+                  if (Debug.debug) Debug.print(NFe); 
+                  throw new HandParseException("Invalid Number of Tricks: "+data[5]);
+               }
+         case 5:
+            if (data[4].length() > 0)
+               this.declarer = data[4].charAt(0);
       }
    }
    public void score() throws ScoreException, ContractParseException
@@ -113,14 +170,21 @@ public class Hand
       }
       if (Debug.debug) Debug.print("number="+number+", num="+num+", n="+Arrays.asList(n)+", v="+Arrays.asList(v)+", vul="+vul);
 
-      Contract c = new Contract(contract, declarer, vul, tricks);
-      if (nsscore != 0 && nsscore != c.getNSScore()) throw new ScoreException("Calculated score as "+c.getNSScore()+" for NS but hand says "+this);
-      nsscore = c.getNSScore();
-      if (ewscore != 0 && ewscore != c.getEWScore()) throw new ScoreException("Calculated score as "+c.getEWScore()+" for EW but hand says "+this);
-      ewscore = c.getEWScore();
-      if (tricks != 0 && tricks != c.getTricks()) throw new ScoreException("Calculated tricks as "+c.getTricks()+" but hand says "+this);
-      tricks = c.getTricks();
-      contract = c.getContract();
+      Contract c;
+      try {
+         c = new Contract(contract, declarer, vul, tricks);
+         if (nsscore != 0 && nsscore != c.getNSScore()) throw new ScoreException("Calculated score as "+c.getNSScore()+" for NS but hand says "+this);
+         nsscore = c.getNSScore();
+         if (ewscore != 0 && ewscore != c.getEWScore()) throw new ScoreException("Calculated score as "+c.getEWScore()+" for EW but hand says "+this);
+         ewscore = c.getEWScore();
+         if (tricks != 0 && tricks != c.getTricks()) throw new ScoreException("Calculated tricks as "+c.getTricks()+" but hand says "+this);
+         tricks = c.getTricks();
+         contract = c.getContract();
+         if (Debug.debug) Debug.print(this);
+      } catch (NoContractException NCe) {
+         if (Debug.debug) Debug.print(NCe);
+         /* not assigning scores on hands which have no contract. Must be averages or something. */
+      }
    }
    public String getNumber() { return number; }
    public String getNS() { return ns; }
@@ -169,14 +233,40 @@ public class Hand
       rv[4] = ""+declarer;
       rv[5] = ""+tricks;
 
-      DecimalFormat format = new DecimalFormat("0.#");
+      DecimalFormat format = new DecimalFormat("0.##");
       FieldPosition field = new FieldPosition(DecimalFormat.INTEGER_FIELD);
 
       StringBuffer tmp = new StringBuffer();
-      rv[6] = format.format(nsscore, tmp, field).toString();
+      switch (nsavetype) {
+         case AVERAGE:
+            rv[6] = "av=";
+            break;
+         case AVERAGE_MINUS:
+            rv[6] = "av-";
+            break;
+         case AVERAGE_PLUS:
+            rv[6] = "av+";
+            break;
+         default:
+            rv[6] = format.format(nsscore, tmp, field).toString();
+            break;
+      }
 
       tmp = new StringBuffer();
-      rv[7] = format.format(ewscore, tmp, field).toString();
+      switch (ewavetype) {
+         case AVERAGE:
+            rv[7] = "av=";
+            break;
+         case AVERAGE_MINUS:
+            rv[7] = "av-";
+            break;
+         case AVERAGE_PLUS:
+            rv[7] = "av+";
+            break;
+         default:
+            rv[7] = format.format(ewscore, tmp, field).toString();
+            break;
+      }
 
       tmp = new StringBuffer();
       rv[8] = format.format(nsmp, tmp, field).toString();
