@@ -3,3 +3,4 @@
  * gsalliere
  * check movements
  * support adjusted scores
+ * support p-o
